--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Your Name | Portfolio</title>
+  <title>Alanis Irizarry | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -20,7 +20,7 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I'm a student pursuing degrees in Journalism and Computer Science. I love telling stories that matter and building tools that make life easier. Whether I'm writing for a newsroom or developing a web app, I bring curiosity, creativity, and attention to detail to everything I do.
+      I’m a student studying Journalism and Computer Science, learning how to communicate ideas clearly and build useful technology. I’m interested in how storytelling and problem-solving intersect — whether I’m writing a news article or working on a coding project. I’m developing skills in reporting, programming, and digital tools, and I’m excited to keep exploring how they can work together.
     </p>
   </section>
 
@@ -28,7 +28,10 @@
     <h2>Journalism Work</h2>
     <ul>
       <li>
-        <strong>Title:</strong> <a href="https://example.com/article1" target="_blank">Investigating Local Housing Policy</a>  
+        <strong>Title:</strong> <a href="https://storymaps.arcgis.com/stories/c914a0f2cd29479b95e2230a668a370f
+" target="_blank">Aquatic Invasions: Disease, Species, and the Changing Ocean
+
+</a>  
         <br><em>Published in The Good 5 Cent Cigar, 2024</em>
       </li>
       <li>
