--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Alanis Irizarry | Portfolio</title>
+  <title>  Alanis Irizarry | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -32,11 +32,11 @@
 " target="_blank">Aquatic Invasions: Disease, Species, and the Changing Ocean
 
 </a>  
-        <br><em>Published in The Good 5 Cent Cigar, 2024</em>
+        <br><em>Published in JOR420 class, 2025</em>
       </li>
       <li>
-        <strong>Title:</strong> <a href="https://example.com/article2" target="_blank">Profile: Voices of the Undocumented</a>
-        <br><em>Published in P.I.N.K. Women, 2023</em>
+        <strong>Title:</strong> <a href="https://drive.google.com/file/d/1raXM-Jwdeyy6Ues7RHACEmFjmbxo8jfr/view?usp=sharing"> Earth Day Package Reporting</a>
+        <br><em>Package in JOR330 class, 2024</em>
       </li>
     </ul>
   </section>
