--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section id="about">
     <h2>About Me</h2>
     <p>
-      I’m a student studying Journalism and Computer Science, learning how to communicate ideas clearly and build useful technology. I’m interested in how storytelling and problem-solving intersect — whether I’m writing a news article or working on a coding project. I’m developing skills in reporting, programming, and digital tools, and I’m excited to keep exploring how they can work together.
+      I’m a student studying Journalism and Computer Science, learning how to communicate ideas clearly and build useful technology. I’m interested in how storytelling and problem-solving intersect, whether I’m writing a news article or working on a coding project. I’m developing skills in reporting, programming, and digital tools, and I’m excited to keep exploring how they can work together.
     </p>
   </section>
 
@@ -36,8 +36,16 @@
       </li>
       <li>
         <strong>Title:</strong> <a href="https://drive.google.com/file/d/1raXM-Jwdeyy6Ues7RHACEmFjmbxo8jfr/view?usp=sharing"> Earth Day Package Reporting</a>
-        <br><em>Package in JOR330 class, 2024</em>
+        <br><em>Video Package in JOR330 class, 2024</em>
       </li>
+
+</a>  
+  <li>
+        <strong>Title:</strong> <a href="https://drive.google.com/file/d/1raXM-Jwdeyy6Ues7RHACEmFjmbxo8jfr/view?usp=sharing"> Anchor Reporting</a>
+        <br><em>Video Package in JOR330 class, 2024</em>
+      </li>      
+</a>  
+
     </ul>
   </section>
 
