--- a/index.html
+++ b/index.html
@@ -53,27 +53,31 @@
     <h2>Computer Science Projects</h2>
     <ul>
       <li>
-        <strong>Task Manager App</strong> — Built a functional app in Asteroid to track tasks using recursion and data aggregation. 
-        <br><a href="https://github.com/yourusername/task-manager" target="_blank">View on GitHub</a>
+        <strong>Momentum- Fitness App</strong> — Built in a team, a functional fitness app in FlutterFlow. 
+        <br><a href="https://momentum3-n4nbqf.flutterflow.app" target="_blank">View Web Deployment</a>
       </li>
       <li>
-        <strong>Fletcher32 Checksum Tool</strong> — Python tool to calculate data integrity checksums.
-        <br><a href="https://github.com/yourusername/fletcher32" target="_blank">View on GitHub</a>
+        <strong>To-Do App</strong> — Flutterflow app to manage tasks.
+        <br><a href="https://to-do-gourza.flutterflow.app/" target="_blank">View Web Deployment</a>
+      </li>
+       <li>
+        <strong>My AI App</strong> — Flutterflow app to manage tasks.
+        <br><a href="https://my-a-i-3oarl8.flutterflow.app/" target="_blank">View Web Deployment</a>
       </li>
     </ul>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
+    <p>Email: <a href="mailto:alaniseirizarry@gmail.com">alaniseirizarry.@gmail.com</a></p>
     <p>
-      <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a> | 
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a>
+      <a href="https://www.linkedin.com/in/alanis-irizarry-9496b830b/" target="_blank">LinkedIn</a> | 
+      <a href="https://github.com/alaniseirizarry" target="_blank">GitHub</a>
     </p>
   </section>
 
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Alanis Irizarry</p>
   </footer>
 </body>
 </html>
