--- a/index.html
+++ b/index.html
@@ -34,16 +34,17 @@
 </a>  
         <br><em>Published in JOR420 class, 2025</em>
       </li>
-      <li>
-        <strong>Title:</strong> <a href="https://drive.google.com/file/d/1raXM-Jwdeyy6Ues7RHACEmFjmbxo8jfr/view?usp=sharing"> Earth Day Package Reporting</a>
-        <br><em>Video Package in JOR330 class, 2024</em>
-      </li>
 
 </a>  
   <li>
         <strong>Title:</strong> <a href="https://drive.google.com/file/d/14eTZzA5kjPzsAe_3JAImwrAxpuRkwXi9/view?usp=sharing"> Anchor Reporting</a>
         <br><em>Video Package in JOR330 class, 2024</em>
-      </li>      
+      </li>     
+
+     <li>
+        <strong>Title:</strong> <a href="https://drive.google.com/file/d/1raXM-Jwdeyy6Ues7RHACEmFjmbxo8jfr/view?usp=sharing"> Earth Day Package Reporting</a>
+        <br><em>Video Package in JOR330 class, 2024</em>
+      </li>
 </a>  
 
     </ul>
@@ -69,7 +70,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:alaniseirizarry@gmail.com">alaniseirizarry.@gmail.com</a></p>
+    <p>Email: <a href="mailto:alaniseirizarry@gmail.com">alaniseirizarry@gmail.com</a></p>
     <p>
       <a href="https://www.linkedin.com/in/alanis-irizarry-9496b830b/" target="_blank">LinkedIn</a> | 
       <a href="https://github.com/alaniseirizarry" target="_blank">GitHub</a>
