--- a/index.html
+++ b/index.html
@@ -3,82 +3,86 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>  Alanis Irizarry | Portfolio</title>
+  <title>Alanis Irizarry | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <h1>Alanis Irizarry</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#journalism">Journalism</a>
-      <a href="#cs">Computer Science</a>
-      <a href="#contact">Contact</a>
-    </nav>
+    <div class="container">
+      <h1>Alanis Irizarry</h1>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#journalism">Journalism</a>
+        <a href="#cs">CS</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
   </header>
 
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I’m a student studying Journalism and Computer Science, learning how to communicate ideas clearly and build useful technology. I’m interested in how storytelling and problem-solving intersect, whether I’m writing a news article or working on a coding project. I’m developing skills in reporting, programming, and digital tools, and I’m excited to keep exploring how they can work together.
-    </p>
-  </section>
+  <main>
+    <section id="about" class="section">
+      <h2>About Me</h2>
+      <p>
+        I’m a student studying Journalism and Computer Science, learning how to communicate ideas clearly and build useful technology. I’m interested in how storytelling and problem-solving intersect—whether I’m writing a news article or building an app. I'm exploring how digital tools can empower both.
+      </p>
+    </section>
 
-  <section id="journalism">
-    <h2>Journalism Work</h2>
-    <ul>
-      <li>
-        <strong>Title:</strong> <a href="https://storymaps.arcgis.com/stories/c914a0f2cd29479b95e2230a668a370f
-" target="_blank">Aquatic Invasions: Disease, Species, and the Changing Ocean
+    <section id="journalism" class="section">
+      <h2>Journalism Work</h2>
+      <div class="card-container">
+        <div class="card">
+          <h3>Aquatic Invasions</h3>
+          <p>Published in JOR420 class, 2025</p>
+          <a href="https://storymaps.arcgis.com/stories/c914a0f2cd29479b95e2230a668a370f" target="_blank">Read StoryMap</a>
+        </div>
+        <div class="card">
+          <h3>Anchor Reporting</h3>
+          <p>Video package in JOR330, 2024</p>
+          <a href="https://drive.google.com/file/d/14eTZzA5kjPzsAe_3JAImwrAxpuRkwXi9/view?usp=sharing" target="_blank">Watch Video</a>
+        </div>
+        <div class="card">
+          <h3>Earth Day Package</h3>
+          <p>Video package in JOR330, 2024</p>
+          <a href="https://drive.google.com/file/d/1raXM-Jwdeyy6Ues7RHACEmFjmbxo8jfr/view?usp=sharing" target="_blank">Watch Video</a>
+        </div>
+      </div>
+    </section>
 
-</a>  
-        <br><em>Published in JOR420 class, 2025</em>
-      </li>
+    <section id="cs" class="section">
+      <h2>Computer Science Projects</h2>
+      <div class="card-container">
+        <div class="card">
+          <h3>Momentum Fitness App</h3>
+          <p>Team project built in FlutterFlow.</p>
+          <a href="https://momentum3-n4nbqf.flutterflow.app" target="_blank">Launch App</a>
+        </div>
+        <div class="card">
+          <h3>To-Do App</h3>
+          <p>Personal productivity tool.</p>
+          <a href="https://to-do-gourza.flutterflow.app/" target="_blank">Launch App</a>
+        </div>
+        <div class="card">
+          <h3>My AI App</h3>
+          <p>Experimenting with AI interfaces.</p>
+          <a href="https://my-a-i-3oarl8.flutterflow.app/" target="_blank">Launch App</a>
+        </div>
+      </div>
+    </section>
 
-</a>  
-  <li>
-        <strong>Title:</strong> <a href="https://drive.google.com/file/d/14eTZzA5kjPzsAe_3JAImwrAxpuRkwXi9/view?usp=sharing"> Anchor Reporting</a>
-        <br><em>Video Package in JOR330 class, 2024</em>
-      </li>     
-
-     <li>
-        <strong>Title:</strong> <a href="https://drive.google.com/file/d/1raXM-Jwdeyy6Ues7RHACEmFjmbxo8jfr/view?usp=sharing"> Earth Day Package Reporting</a>
-        <br><em>Video Package in JOR330 class, 2024</em>
-      </li>
-</a>  
-
-    </ul>
-  </section>
-
-  <section id="cs">
-    <h2>Computer Science Projects</h2>
-    <ul>
-      <li>
-        <strong>Momentum- Fitness App</strong> — Built in a team, a functional fitness app in FlutterFlow. 
-        <br><a href="https://momentum3-n4nbqf.flutterflow.app" target="_blank">View Web Deployment</a>
-      </li>
-      <li>
-        <strong>To-Do App</strong> — Flutterflow app to manage tasks.
-        <br><a href="https://to-do-gourza.flutterflow.app/" target="_blank">View Web Deployment</a>
-      </li>
-       <li>
-        <strong>My AI App</strong> — Flutterflow app to manage tasks.
-        <br><a href="https://my-a-i-3oarl8.flutterflow.app/" target="_blank">View Web Deployment</a>
-      </li>
-    </ul>
-  </section>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:alaniseirizarry@gmail.com">alaniseirizarry@gmail.com</a></p>
-    <p>
-      <a href="https://www.linkedin.com/in/alanis-irizarry-9496b830b/" target="_blank">LinkedIn</a> | 
-      <a href="https://github.com/alaniseirizarry" target="_blank">GitHub</a>
-    </p>
-  </section>
+    <section id="contact" class="section">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:alaniseirizarry@gmail.com">alaniseirizarry@gmail.com</a></p>
+      <p>
+        <a href="https://www.linkedin.com/in/alanis-irizarry-9496b830b/" target="_blank">LinkedIn</a> |
+        <a href="https://github.com/alaniseirizarry" target="_blank">GitHub</a>
+      </p>
+    </section>
+  </main>
 
   <footer>
     <p>© 2025 Alanis Irizarry</p>
   </footer>
 </body>
 </html>
+
